istio-1.22.2/samples/grpc-echo/gateway-grpc.yaml
#ingress gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
  namespace: echo-grpc
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 7070
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: grpc-virtual
#   namespace: echo-grpc
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - grpc-gateway
#   http:
#   - match:
#     - port: 7070
#       uri:
#         prefix: /
#     route:
#     - destination:
#         host: echo.echo-grpc.svc.cluster.local
#         subset: v1
#         port:
#           number: 7070
#       weight: 20
#     - destination:
#         host: echo.echo-grpc.svc.cluster.local
#         subset: v2
#         port:
#           number: 7070
#       weight: 80

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: echo-versions
#   namespace: echo-grpc
# spec:
#   host: echo.echo-grpc.svc.cluster.local
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
