istio-1.22.2/samples/grpc-echo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-virtual
  namespace: echo-grpc
spec:
  hosts:
  - "*"
  gateways:
  - grpc-gateway
  http:
  - match:
    - port: 7070
      uri:
        prefix: /
    route:
    - destination:
        host: echo.echo-grpc.svc.cluster.local
        subset: v1
        port:
          number: 7070
      weight: 20
    - destination:
        host: echo.echo-grpc.svc.cluster.local
        subset: v2
        port:
          number: 7070
      weight: 80
